<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CompassActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Compass"
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422">

<!--        <ImageView-->
<!--            android:id="@+id/compass_bg"-->
<!--            android:layout_width="309dp"-->
<!--            android:layout_height="319dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.505"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.506"-->
<!--            app:srcCompat="@drawable/rings4" />-->

<!--        <ImageView-->
<!--            android:id="@+id/north_point"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            app:layout_constraintCircle="@+id/Compass"-->
<!--            app:layout_constraintCircleAngle="270"-->
<!--            app:layout_constraintCircleRadius="100dp"-->
<!--            app:srcCompat="@drawable/north_point"-->
<!--            tools:ignore="MissingConstraints"-->
<!--            tools:layout_editor_absoluteX="380dp"-->
<!--            tools:layout_editor_absoluteY="380dp" />-->

<!--        <ImageView-->
<!--            android:id="@+id/center_point"-->
<!--            android:layout_width="20dp"-->
<!--            android:layout_height="20dp"-->
<!--            app:layout_constraintCircle="@+id/compass_bg"-->
<!--            app:layout_constraintCircleRadius="0dp"-->
<!--            app:srcCompat="@drawable/black_point"-->
<!--            tools:ignore="MissingConstraints"-->
<!--            tools:layout_editor_absoluteX="380dp"-->
<!--            tools:layout_editor_absoluteY="380dp" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/editApiUrl"
        android:layout_width="157dp"
        android:layout_height="40dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="API URL"

        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Compass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="61dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        android:onClick="OkbtnClicked"
        android:text="OK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editApiUrl"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/zoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/Compass"
        android:gravity="right"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="541dp">

        <Button
            android:id="@+id/incr_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="10dp"
            android:onClick="onIncrZoomBtnClicked"
            android:text="+"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/decr_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:onClick="onDecrZoomBtnClicked"
            android:text="-"
            android:textSize="30dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/DC_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="0 m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/connection_status"
        app:layout_constraintTop_toBottomOf="@+id/zoom" />

    <ImageView
        android:id="@+id/connection_status"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zoom"
        app:srcCompat="@drawable/green_point" />

</androidx.constraintlayout.widget.ConstraintLayout>